applied aniations on button ana modal dialog

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -2,7 +2,7 @@
   position: fixed;
   z-index: 200;
   border: 1px solid #eee;
-  box-shadow: 0 2px 2px #ccc;
+  box-shadow: 2px 2px rgb(136, 130, 130);
   background-color: white;
   padding: 10px;
   text-align: center;
@@ -10,14 +10,46 @@
   top: 30%;
   left: 25%;
   width: 50%;
+  transition: all 0.3 ease-out;
 }
 
 .ModalOpen {
   display: block;
-  /* opacity: 1; */
+  animation: openModal 0.4s ease-out forwards;
 }
 
 .ModalClose {
   display: none;
-  /* opacity: 1; */
+
+  /* animation: closeModal 0.4s ease-out forwards; */
+}
+
+@keyframes openModal {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(20%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes closeModal {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  50% {
+    opacity: 1;
+    transform: translateY(20%);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
 }
