--- a/src/index.css
+++ b/src/index.css
@@ -5,15 +5,23 @@ body {
 }
 
 .Button {
-  border: 1px solid #521751;
+  border: 1px solid #c28181;
+
   font: inherit;
   padding: 8px;
-  background-color: #521751;
-  color: white;
+  box-shadow: -2px 2px 15px #c28181;
+  border-radius: 2rem;
+  background-color: #ec9a9a;
+  color: rgb(27, 21, 21);
   cursor: pointer;
+  transition-duration: 0.4s;
 }
 
 .Button:hover,
 .Button:active {
-  background-color: #fa923f;
+  box-shadow: -5px 5px 10px #c28181;
+  transform: scale(1.2);
+  transition: all 0.2s ease-in-out;
+  background-color: #9c4747;
+  color: white;
 }
